--- a/javase-empty/pom.xml
+++ b/javase-empty/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
 
     <groupId>com.vonzhou.learning</groupId>
-    <artifactId>jvm-example</artifactId>
+    <artifactId>javase-empty</artifactId>
     <version>1.0</version>
 
     <properties>
@@ -14,21 +14,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>3.3.1</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
     </dependencies>
