--- a/log4j2-example/src/main/resources/log4j.properties
+++ b/log4j2-example/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.error.layout=org.apache.log4j.PatternLayout
 log4j.appender.error.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
 
 
-log4j.logger.com.vonzhou.learn=debug,foo
+log4j.logger.com.vonzhou.learn.foo=debug,foo
 log4j.appender.foo=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.foo.File=${LOG_DIR}/foo.log
 log4j.appender.foo.DatePattern=yyyy-MM-dd'.log'
