--- a/mvn-profile-example/src/main/webapp/WEB-INF/web.xml
+++ b/mvn-profile-example/src/main/webapp/WEB-INF/web.xml
@@ -5,15 +5,15 @@
          version="3.0">
 
     <servlet>
-        <servlet-name>spitter</servlet-name>
+        <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
 
     <servlet-mapping>
-        <servlet-name>spitter</servlet-name>
-        <url-pattern>/</url-pattern>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
     <listener>
@@ -22,8 +22,15 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/spitter-servlet.xml
-            classpath:service-context.xml
+            classpath:service-context.xml,
+            /WEB-INF/dispatcher-servlet.xml
         </param-value>
     </context-param>
+
+    <welcome-file-list>
+        <welcome-file>index.do</welcome-file>
+    </welcome-file-list>
+    <session-config>
+        <session-timeout>120</session-timeout>
+    </session-config>
 </web-app>
