--- a/guava-examples/src/main/resources/log4j.properties
+++ b/guava-examples/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
-log4j.rootLogger =info, stdout
+log4j.rootLogger =debug, stdout
 
 ### direct log messages to stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
