--- a/spring-read-properties/pom.xml
+++ b/spring-read-properties/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>mail</artifactId>
             <version>1.4.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
 </project>
