--- a/spring-read-properties/src/main/resources/log4j.properties
+++ b/spring-read-properties/src/main/resources/log4j.properties
@@ -1,9 +1,16 @@
-### set log levels - for more verbose logging change 'info' to 'debug' ###
-log4j.rootLogger =info, stdout
 
-### direct log messages to stdout ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
+log4j.rootLogger =DEBUG, app
+
+log4j.appender.app=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.app.Threshold=DEBUG
+log4j.appender.app.File=${user.home}/app.log
+log4j.appender.app.DatePattern=yyyy-MM-dd'.log'
+log4j.appender.app.Append=true
+log4j.appender.app.layout=org.apache.log4j.PatternLayout
+log4j.appender.app.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c{1}:%L - %m%n
+
+
+
+
+
 
