--- a/spring-read-properties/src/main/webapp/WEB-INF/web.xml
+++ b/spring-read-properties/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,14 @@
     <session-config>
         <session-timeout>120</session-timeout>
     </session-config>
+
+
+    <context-param>
+        <param-name>webAppRootKey</param-name>
+        <param-value>webapp.root</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
+    </listener>
 </web-app>
